# for display continuity sake please use 2 spaces instead of tabs

2012-10-01 mmichaud <michael.michaud@free.fr>
  * ExtractLayersByAttribute port r1.5 from skyjump to openjump
  * SIDLayer port r1.3 from skyjump to openjump

2012-09-30 sstein <sstein@geo.uzh.ch>
  * Modified the I18N class to retrieve the English default string if
    a received language string starts with "#T:". Accordingly I modified
    all empty/not translated strings in all language property files
    to start with that char-Sequence. This was done, so that not
    translated text-keys will appear in each language file. Until now
    several language missed keys to translate due to the need to sync
    with the default language property file. 
    
2012-09-30 Matthias Scholz <ms@jammerhund.de>
  * fix bug 3573079 with the detachable attribute window. Plase read the comment
    in the DetachableInternalFrame.detach() method.

2012-09-29 sstein <sstein@geo.uzh.ch>
  * New function "Tools>Generate>Create Point Layer from Attribute Table..." to generate 
    a point layer based on 2 attribute fields. The function can be used to convert 
    items in a read CSV file/table into a point layer. 
    - new class: PointLayerFromAttributeTablePlugIn  
    
2012-09-29 mmichaud <michael.michaud@free.fr>
  * DataSourceFileLayerLoader : last commit broke the setReadonly instruction
    applied on compressed files. This is now fixed.
  * Modify SaveDatasetsPlugIn so that it can save formats defined in drivers
    loaded from extensions (ex. dxf, geoconcept, kml)
  * SaveDatasetAsPlugIn now replace layer special characters by '_' to
    propose a valid file name in the file chooser

2012-09-26 mmichaud <michael.michaud@free.fr>
  * DataSourceFileLayerLoader : revert a change made a few months ago. Layer
    name has the file name *without* extension again. Did not yet revert for zip 
    files which still take the compressed file name (+ zip file name within 
    parenthesis) 

2012-09-25 ede