@@ -109,6 +109,7 @@
 	<plug-in>de.fho.jump.pirol.plugins.EditAttributeByFormula.EditAttributeByFormulaPlugIn</plug-in>
 	<plug-in>org.openjump.core.ui.plugin.tools.AddGeometryAttributesPlugIn</plug-in>
 	<plug-in>org.openjump.core.ui.plugin.tools.Add3DGeometryAttributesPlugIn</plug-in>
+	<plug-in>org.openjump.core.ui.plugin.tools.JoinTableFromExistingLayerPlugIn</plug-in>
 	<!--- =========  Generalization ====================  /-->	
 	<plug-in>org.openjump.core.ui.plugin.tools.LineSimplifyJTS15AlgorithmPlugIn</plug-in>	
 	<!--plug-in>org.openjump.core.ui.plugin.tools.ReducePointsISAPlugIn</plug-in-->
